--- a/components/admin/Card.module.css
+++ b/components/admin/Card.module.css
@@ -1,4 +1,5 @@
 .card {
+    position: relative;
     justify-content: space-between;
     width: 100%;
     flex-direction: column;
@@ -6,24 +7,31 @@
 }
 
 .card-content {
+    margin-top: 40px;
     padding: 10px 20px;
     align-items: center;
     flex-direction: column;
 }
 
 .actions {
+    position: absolute;
+    bottom: -10px;
     justify-content: flex-end;
     background-color: var(--grayF);
     width: 100%;
     padding: 10px;
+    padding-right: 40px;
 }
+
+
 
 .actions button {
     border: none;
-    background: var(--white);
+    background: var(--main);
     text-transform: uppercase;
-    color: var(--green);
-    border: 1px solid var(--green);
-    border-radius: 4px;
-    padding: 16px;
+    color: var(--white);
+    font-weight: bold;
+    border: 1px solid var(--main);
+    border-radius: 12px;
+    padding: 10px 16px;
 }
