--- a/components/admin/CardMessage.module.css
+++ b/components/admin/CardMessage.module.css
@@ -5,6 +5,7 @@
     padding: 10px;
     border-radius: 10px;
     margin: auto;
+    margin-bottom: 30px;
     box-shadow: 0 0 9px 0px #00000042;
 }
 
