--- a/components/admin/Admin.module.css
+++ b/components/admin/Admin.module.css
@@ -9,6 +9,30 @@
     overflow: auto;
 }
 
+.alert {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+.alert img {
+    width: 50%;
+    align-self: center;
+    justify-self: center;
+}
+.alert h2 {
+    color: var(--main);
+}
+.alert p {
+    margin: 5px;
+}
+.alert span {
+    font-weight: bold;
+}
+
+.alert a {
+    text-decoration: none;
+    color: var(--second);
+}
 
 .contatosContent{
     display: flex;
@@ -62,7 +86,7 @@
 }
 
 .messageList .ulList li:hover {
-    background-color: #ff8600a3;
+    background-color: #ff5050c4;
     box-shadow: 0 0 13px #00000073;
     transition: all .2s ease-in-out;
 }
@@ -82,6 +106,7 @@
     padding: 5px;
     background-color: #ffffff00;
     height: 2.5em;
+    outline: none;
 }
 
 .nameList {
@@ -118,6 +143,7 @@
 
 .photos {
     width: 90%;
+    border-radius: 12px;
 }
 
 .header {
@@ -148,6 +174,7 @@
 
 .formPost label.user .avatar {   
     width: 100%;
+    border-radius: 12px;
 }
 
 .avatar {
@@ -207,7 +234,7 @@
 }
 
 .divButton {
-    margin-bottom: -26px;
+    margin-bottom: -24px;
     margin-right: 35px;
 }
 
