--- a/components/admin/ButtonAdmin.module.css
+++ b/components/admin/ButtonAdmin.module.css
@@ -10,6 +10,7 @@
     padding: 5px 18px;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 .buttonAdmin:hover{
     background-color: var(--second);
