--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -17,13 +17,13 @@
     box-shadow: var(--black) 0 3px 6px;
     border: none;
     border-radius: 50%;
-    width: 70px;
-    height: 70px;
-    padding: 13px;
+    width: 50px;
+    height: 50px;
+    padding-bottom: 5px;
     outline: none;
     justify-content: center;
     align-items: center;
-    top: -35px;
+    top: -25px;
     z-index: 1;
     cursor: pointer;
 }
@@ -31,7 +31,9 @@
 #footer button:hover {
     background-color: var(--white);
 }
-
+#footer button img{
+    width: 75%;
+}
 #footer .columns {
     width: 100%;
     flex-direction: column;
