--- a/components/admin/Admin.module.css
+++ b/components/admin/Admin.module.css
@@ -238,6 +238,21 @@
     margin-right: 35px;
 }
 
+.newMovie {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.newMovie h2 {
+    margin-top: 40px;
+    width: 80%;
+}
+.newMovie img {
+    width: 60%;
+    margin-top: 50px;
+}
+
 
 @media (min-width: 768px) {
 
