--- a/components/Slug.module.css
+++ b/components/Slug.module.css
@@ -68,6 +68,7 @@
     margin: 0;
 }
 
+
 .shopList .ulList li {
     display: flex;
     flex-direction: column;
@@ -78,6 +79,10 @@
     border-radius: 15px;
     background-color: white;
     transition: all .1s ease-in-out;
+}
+
+.shopList .ulList.ulCinema li {
+    height: initial;
 }
 
 .shopList .ulList li:hover {
@@ -108,6 +113,16 @@
     background-size: contain;
     background-repeat: no-repeat; 
     background-position: center; 
+}
+
+.posterContent {
+    position: relative;
+    margin: auto;
+}
+
+.posterContent .poster {
+    width: 100%;
+    border-radius: 15px;
 }
 
 .shopName {
@@ -161,6 +176,8 @@
 .photos {
     width: 25%;
 }
+
+
 
 @media (min-width: 768px) {
 
