--- a/components/Variables.css
+++ b/components/Variables.css
@@ -7,6 +7,7 @@
 :root {
     --main: #A100F5;
     --second: #fc6681;
+    --labelPoster: #f9a825;
     --bg-admin:#915cad;
     --bg-color: #FFF;
     --black: #000;
