--- a/components/Variables.css
+++ b/components/Variables.css
@@ -7,6 +7,9 @@
 :root {
     --main: #A100F5;
     --second: #fc6681;
+    --subtitle2: #fff;
+    --btn-food: #ff9700;
+    --btn-food-hover: #b66d00;
     --labelPoster: #f9a825;
     --bg-admin:#915cad;
     --bg-color: #FFF;
