--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -2,8 +2,8 @@
     width: 100%;
     min-width: 320px;
     position: relative;
-    background-color: var(--dark);
-    color: var(--white50);
+    background-color: var(--bg-footer);
+    color: var(--font-footer);
     flex-direction: column;
     padding: 2em;
     align-items: center;
@@ -58,20 +58,47 @@
 }
 
 #footer ul li.title {
+    color: var(--second);
     font-weight: bold;
     font-size: 20px;
 }
 
+#footer ul li.contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+#footer ul li.contact p {
+    margin: 0;
+}
+
 #footer .social {
     align-items: center;
+    justify-content: center;
 }
+
+#footer a {
+    text-decoration: none;
+    color: var(--a-footer);
+    font-weight: bold;
+}
+
+#footer a:hover,
+#footer a:active {
+    color: white;
+}
+
 
 #footer .social a {
     margin-right: 1em;
 }
 
 #footer .social img {
-    height: 24px;
+    height: 40px;
+}
+#footer .social img:hover,
+#footer .social img:active {
+    filter: drop-shadow(2px 4px 6px black);
 }
 
 #footer .logo {
@@ -82,7 +109,6 @@
 #footer p {
     text-align: center;
     font-size: 18px;
-    font-weight: bold;
 }
 
 @media (min-width: 1200px) {
