--- a/components/Variables.css
+++ b/components/Variables.css
@@ -13,6 +13,9 @@
     --labelPoster: #f9a825;
     --bg-admin:#915cad;
     --bg-color: #FFF;
+    --bg-footer: #3F3D56;
+    --font-footer: #c1c1c1;
+    --a-footer: #FFFFFF50;
     --black: #000;
     --white: #FFF;
     --whiteDark: #FFFFFF8A;
